src/components/visualizer/visualizers.scss
#barSurfer>div.mdl-slider-background-flex-container,
#barSurfer>input.nowPlayingBarPositionSlider,
#barSurfer>div.sliderBubbleTrack #inputSurfer[hidden],
#barSurfer[hidden] ::part(wrapper) {
    display: none;
}

#barSurfer[hidden]>div.mdl-slider-background-flex-container,
#barSurfer[hidden]>input.nowPlayingBarPositionSlider,
#barSurfer[hidden]>div.sliderBubbleTrack {
    display: unset;
}

header,
div.nowPlayingBarTop {
    padding: 1rem 1rem;
}

header {
    padding-top: env(safe-area-inset-top);
}

div#barSurfer ::part(wrapper) {
    display: block;
    width: 100vw;
    background-color: rgb(50 50 50 / 15%);
    overflow: visible;
    z-index: 6;
}

div#barSurfer,
div#inputSurfer,
div#inputSurfer ::part(wrapper),
div#barSurfer ::part(wrapper),
div.appfooter>div.nowPlayingBar {
    -webkit-tap-highlight-color: transparent;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

#inputSurfer ::part(minimap) {
    bottom: 15rem;
    height: 2rem;
    opacity: .9;
    user-select: none;
    z-index: 3;
    left: 0;
    right: 0;
    padding-left: 38%;
    padding-right: 38%;
}

#inputSurfer {
    bottom: 6rem;
    height: 6rem;
    width: 100vw;
    left: 0;
    right: 0;
    position: fixed;
    z-index: 0;
    cursor: pointer;
}

#simpleSlider {
    bottom: 17.9rem;
    left: 0;
    position: fixed;
    z-index: 1;
    right: 0;
    padding-left: 24%;
    padding-right: 24%;
}

#simpleSlider[hidden] .nowPlayingPositionSliderContainer {
    opacity: 0;
}

#simpleSlider[hidden] {
    overflow: visible;
    user-select: none;
    pointer-events: none;
}

.nowPlayingButtonsContainer {
    position: relative;
    bottom: 8rem;
}

.nowPlayingSecondaryButtons {
    position: fixed;
    bottom: 1.5rem;
}

#playlist {
    background-color: rgba(7, 7, 7, 0.936);
    z-index: 4;
    position: absolute;
}

div.infoContainer>.nowPlayingInfoContainerMedia>div,
div.infoContainer>.nowPlayingInfoContainerMedia>div>a {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    max-width: 30vh;
}

div.nowPlayingPageImageContainer {
    position: fixed;
    bottom: 26.25rem;
    width: 92.5%;
    margin-right: 0rem !important;
    z-index: 1;
    user-select: none;
    pointer-events: none;
}

div.infoContainer {
    bottom: 20rem;
    position: fixed;
    width: 85%;
}

div.nowPlayingButtonsContainer {
    position: fixed;
    bottom: 12rem;
    width: 85%;
}

body.mouseIdle {
    cursor: none !important;
}

div>form>div>button,
button.button-submit.btnSave {
    position: fixed !important;
    bottom: 9rem;
    right: 2rem;
    width: 20% !important;
    min-width: 12rem;
    z-index: 1;
    left: unset;
    top: unset;
}

#barSurfer ::part(cursor) {
    border-radius: 10px;
    z-index: -1;
}

.nowPlayingVolumeSliderContainer {
    flex: 1;
    flex-wrap: nowrap;
}

.volumecontrol.hide {
    display: flex;
    flex: 1;
    flex-wrap: nowrap;
}

div.skinBody>#musicPage,
.page.mainAnimatedPage.libraryPage.withTabs {
    margin-top: 6rem !important;
}

div.skinBody>#musicPage,
div.flex.align-items-center.justify-content-center.flex-wrap-wrap.padded-top.padded-left.padded-right.padded-bottom.focuscontainer-x.padPagination.MuiBox-root.css-0 {
    padding-bottom: 12rem !important;
}

body.transition canvas#frequencyAnalyzer,
body.transition canvas#butterchurn,
canvas#butterchurn,
canvas#frequencyAnalyzer {
    position: fixed;
    z-index: -1;
    opacity: 0.6;
    mix-blend-mode: difference;
    transition: opacity 1.4s ease-in-out;
}

body:not(.transition).mouseIdle canvas#butterchurn,
body:not(.transition).mouseIdle canvas#frequencyAnalyzer {
    opacity: 0.75;
    mix-blend-mode: normal;
    transition: opacity 6s ease-in-out;
    transition-delay: 20s;
}

@media (orientation: portrait) and (max-width: 915px) {
    #nowPlayingPage {
        top: 100vh;
    }

    .playlistSectionButton {
        margin-top: 6rem;
    }

    .remoteControlContent {
        height: 100%;
    }

    .nowPlayingInfoContainer {
        align-items: center;
        flex-direction: column !important;
        height: calc(100% - 4.2em);
        width: 100%;
        display: flex;
    }
}

@media (orientation: landscape) and (min-width: 915px) {
    #inputSurfer ::part(minimap) {
        position: fixed;
        left: 34vw;
        right: 34vw;
        height: 3rem;
        z-index: 3;
        top: unset;
        transform: unset;
        bottom: -1.5rem;
        width: 32vw;
        opacity: 0.8;
        max-width: unset;
    }

    #simpleslider {
        height: 3rem;
        position: fixed;
        z-index: 3;
        bottom: -1.5rem;
        left: 20vw;
        right: 20vw;
        width: 60vw;
        max-width: unset;
    }

    canvas#butterchurn
    body:not(.transition).mouseIdle canvas#frequencyAnalyzer {
        opacity: 0.25;
        mix-blend-mode: difference;
        transition: opacity 6s ease-in-out;
        transition-delay: 20s;
    }

    .nowPlayingSecondaryButtons {
        position: unset;
        bottom: unset;
    }

    #inputSurfer ::part(minimap) {
        height: 3rem;
        z-index: 3;
        bottom: -1.4rem;
        opacity: 0.8;
        padding: unset;
    }

    #simpleSlider {
        padding: unset;
        z-index: 3;
        height: 1rem;
        position: fixed;
        bottom: -0.25rem;
        overflow: visible;
        user-select: none;
        margin: none;
        pointer-events: none;
        left: 31%;
        right: 31%;
        width: 38%;

        &>.nowPlayingPositionSliderContainer {
            margin-left: 2vw;
            margin-right: 2vw;
        }
    }

    #inputSurfer {
        height: 9.8rem;
        margin: 0;
        position: fixed;
        left: 0;
        right: 0;
        max-width: 100vw;
        bottom: 1.5rem;
    }

    .backgroundContainer.withBackdrop,
    body.transition .backgroundContainer.withBackdrop {
        opacity: 0.9;
        transition: opacity 1.4s ease-in-out;
    }

    #playlist div>div.listViewUserDataButtons,
    #nowPlayingPage div.playlistSection div.playlistSectionButton,
    #playlist button div.listItemImage.lazy,
    #playlist div.listItem>div.listItemImage.itemAction,
    #playlist div>span {
        opacity: 0;
        animation: none;
    }

    #playlist div.listItem:hover div.listViewUserDataButtons,
    #playlist button:hover div.listItemImage,
    #playlist div.listItem:hover>div.listItemImage.itemAction,
    #playlist div.listItem>div.listItemImage.itemAction.playlistIndexIndicatorImage,
    #playlist button div.playlistIndexIndicatorImage,
    #nowPlayingPage div.playlistSection div:hover.playlistSectionButton,
    #playlist div.listItem:hover>span {
        opacity: 1;
    }

    div#playlist {
        background-color: unset;
        padding-top: 3rem;
        padding-bottom: 3rem;
        scrollbar-width: none;
        position: unset;
        z-index: unset;
    }

    div.nowPlayingButtonsContainer {
        align-items: center;
        bottom: 6.4rem;
        height: 0;
        left: 7.2rem;
        margin: 0;
        position: fixed;
        right: 6.5rem;
    }

    .nowPlayingInfoControls>.infoContainer {
        z-index: -1;
        position: fixed;
        bottom: 23rem;
        left: -0.2em;
        background-color: black;
        padding-top: 2.1rem;
        padding-bottom: 1.1rem;
        padding-left: 32.5rem;
        padding-right: 2.6rem;
        border-radius: .2em;
        width: unset;
    }

    /* Base state: element is off-screen */
    .nowPlayingInfoControls>.infoContainer {
        transform: translateX(calc(-80vw - 6rem));
        transition: transform 4s ease-in-out;
    }

    /* Slide in when the page loads or when the user is active */
    body:not(.mouseIdle) .nowPlayingInfoControls>.infoContainer,
    body.transition .nowPlayingInfoControls>.infoContainer {
        transform: translateX(0);
        transition-delay: 0s;
        /* Ensures immediate transition when user becomes active */
    }

    /* Slide out after 15 seconds of mouse idle */
    body:not(.transition).mouseIdle .nowPlayingInfoControls>.infoContainer {
        transition-delay: 15s;
        /* Delays the transition by 15 seconds */
    }

    header,
    .skinHeader,
    div#itemDetailPage,
    div#musicPage,
    div#indexPage,
    #simpleSlider,
    .nowPlayingButtonsContainer,
    body.transition .nowPlayingInfoContainer>.nowPlayingPageImageContainer,
    .nowPlayingInfoContainer>.nowPlayingPageImageContainer {
        opacity: 1;
        transition: opacity 500ms ease-in-out;
    }

    body.mouseIdle header,
    body.mouseIdle .skinHeader,
    body.mouseIdle #simpleSlider .nowPlayingPositionSliderContainer,
    body.mouseIdle .nowPlayingButtonsContainer {
        opacity: 0;
        transition: opacity 500ms ease-out;
    }

    body:not(.transition).mouseIdle div#itemDetailPage,
    body:not(.transition).mouseIdle div#musicPage,
    body:not(.transition).mouseIdle div#indexPage,
    body:not(.transition).mouseIdle .nowPlayingInfoContainer>.nowPlayingPageImageContainer {
        opacity: 0;
        transition: opacity 500ms ease-out;
        transition-delay: 25s;
    }

    body:not(.transition).mouseIdle .backgroundContainer.withBackdrop {
        opacity: 0.5;
        transition: opacity 12s ease-in-out;
        transition-delay: 20s;
    }


    .nowPlayingInfoContainer {
        height: unset;
    }

    .volumecontrol.hide {
        display: unset;
        flex: unset;
    }

    .playlist.vertical-list.nowPlayingPlaylist.hide {
        display: flex;
    }

    .itemsContainer-tv>.squareCard,
    .itemsContainer>.squareCard {
        width: calc(100%/5);
    }

    div.playlistSection {
        bottom: 12rem;
        font-size: .75em;
        max-height: 12rem;
        overflow: auto;
        padding: 0;
        padding-left: 2.5rem;
        padding-right: 2rem;
        position: fixed;
        scrollbar-width: none;
        width: 32rem;
        z-index: 0;
        padding-top: 6rem;
        padding-bottom: 0rem;
        right: 1rem;
    }

    .nowPlayingInfoContainer>.nowPlayingPageImageContainer {
        width: 24rem;
        bottom: unset;
    }

    .nowPlayingPageImage {
        position: absolute;
    }

    .mediaInfoItem {
        min-width: 1.5rem;
    }

    .listItem.listItem-border {
        border: none !important;
        border-style: none !important;
        border-color: rgb(255 255 255 / 0%) !important;
    }

    .nowPlayingInfoContainerMedia {
        margin-bottom: 0;
    }

    body::-webkit-scrollbar,
    body.mouseIdle .remoteControlSection {
        display: none;
    }

    html {
        scrollbar-width: none;
    }

    div.nowPlayingInfoContainer {
        bottom: 12rem;
        left: 6rem;
        max-width: 60rem;
        position: fixed;
        z-index: 1;
    }

    .sliderContainer.flex {
        position: fixed;
        bottom: 1rem;
        left: 2.8rem;
        right: 2.8rem;
        font-size: 0.6em;
    }

    // #playlist>button {
    //     height: 1.5rem;
    // }

    .listItemImage.playlistIndexIndicatorImage {
        background-size: 2em !important;
        bottom: 0.3em;
        opacity: unset;
    }

    .listItemBodyText {
        margin: 0;
        overflow: hidden;
        padding: .1em 0;
        text-overflow: ellipsis;
        white-space: pre;
        direction: ltr;
    }

    .layout-desktop,
    .scrollY {
        scrollbar-width: none;
    }
}

